fix del horizontal scroll

--- a/src/store/components/Card/card.scss
+++ b/src/store/components/Card/card.scss
@@ -8,7 +8,8 @@ header {
 	flex-direction: column;
 	background-color: $bgHeader;
 	color: $white;
-	width: 99vw;
+	width: 100vw;
+	max-width: 100%;
 	align-items: center;
 
 	.head {
@@ -71,11 +72,18 @@ main {
 	flex-direction: column;
 	background-color: $bgMain;
 	align-items: center;
-	width: 99vw;
+	width: 100vw;
+	max-width: 100%;
 
 	.nav__opt {
-		// display: none;
-		display: block;
+		display: none;		
+		width: 100%;
+		margin: 15px;
+		border: 1px solid #f3d1bf;
+		border-radius: 5px;
+		color: #80695c;
+		padding: 5px 14px;
+		margin-left: 0px;
 	}
 
 	.nav__btn {
@@ -200,13 +208,6 @@ main {
 	main {
 		.nav__opt {
 			display: block;
-			width: 100%;
-			margin: 15px;
-			border: 1px solid #f3d1bf;
-			border-radius: 5px;
-			color: #80695c;
-			padding: 5px 14px;
-			margin-left: 0px;
 		}
 
 		.nav__btn {
